@@ -153,7 +153,8 @@ Pass through TDT/TOT packets when output filtering is enabled.
 \fB\-c\fR, \fB\-\-ca\-system\fR <ca_sys>
 Process input EMM/ECM from <ca_sys>. Currently tested and working CA systems
 are \fBCONAX\fR, \fBCRYPTOWORKS\fR, \fBIRDETO\fR, \fBVIACCESS\fR, \fBMEDIAGUARD\fR
-(\fBSECA\fR) and \fBVIDEOGUARD\fR (\fBNDS\fR), \fBNAGRA\fR and \fBBULCRYPT\fR.
+(\fBSECA\fR) and \fBVIDEOGUARD\fR (\fBNDS\fR), \fBNAGRA\fR, \fBBULCRYPT\fR,
+\fBGRIFFIN\fR and \fBDGCRYPT\fR.
 Other supported CA system that you can choose but is not tested is \fBDRECRYPT\fR.
 The default \fB<ca_sys>\fR is \fBCONAX\fR. You can override the default CAS CAIDs
 by using \fB\-\-caid\fR parameter.
